[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/sprites_1.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.00204, 1.50773 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )
speed = 5

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 10, 10, 4, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTimeTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="timeout" from="LifeTimeTimer" to="." method="_on_LifeTimeTimer_timeout"]
